# assistant-axis

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
assistant_axis/: __init__.py  generation.py  models.py
assistant_axis/internals/: __init__.py  activations.py  conversation.py  exceptions.py  model.py  spans.py
data/generation/: extraction_questions.jsonl
data/generation/roles/: role_list.json
data/generation/roles/instructions/: aberration.json  absurdist.json  accountant.json  activist.json  actor.json  addict.json  adolescent.json  advocate.json  (+268 more)
data/generation/traits/: trait_list.json
notebooks/: 1_pca.ipynb  1_visualize_axis.ipynb  3_steering.ipynb  4_projecting.ipynb  pca.ipynb  visualize_axis.ipynb
pipeline/: 2_activations.py  3_judge.py  4_vectors.py  5_axis.py  run_pipeline.sh
rl_experiments/: README.md  train_grpo.py  train_grpo_qwen.py
rl_experiments/notebooks/: pca_after_rl.ipynb  pca_during_rl.ipynb
scripts/: 1_generate.py
transcripts/: README.md
transcripts/case_studies/llama-3.3-70b/: selfharm_capped.json  selfharm_unsteered.json
transcripts/case_studies/qwen-3-32b/: delusion_unsteered.json  jailbreak_capped.json  jailbreak_unsteered.json  selfharm_capped.json  selfharm_unsteered.json.json
transcripts/llama-3.3-70b/: isolation_unsteered.json
transcripts/llama-3.3-70b/case_studies/: selfharm_capped.json
transcripts/persona_drift/: coding.json  philosophy.json  therapy.json  writing.json
transcripts/qwen-3-32b/case_studies/: delusion_capped.json  jailbreak_capped.json  jailbreak_unsteered.json
(+240 files in other folders)
