[project]
name = "assistant-axis"
version = "0.1.0"
description = "Tools for computing and steering with the assistant axis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate",
    "huggingface_hub",
    "vllm",
    "scikit-learn",
    "numpy",
    "plotly",
    "jupyter",
    "pyarrow",
    "openai",
    "python-dotenv",
    "tqdm",
    "jsonlines",
    "matplotlib>=3.10.8",
    "trl>=0.27.1",
    "datasets>=4.5.0",
    "peft>=0.18.1",
    "bitsandbytes>=0.49.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistant_axis"]
